<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textAlignment="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textAlignment="center"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/city_name"/>

    </LinearLayout>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/wind_sel"
        android:text="@string/speed_wind_sel"
        android:checked="true"
        />

    <CheckBox
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/wet_sel"
    android:text="@string/wet_sel"
    android:checked="true"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:text="@string/button_accept"
        android:id="@+id/but_accept"/>




</LinearLayout>